--- a/notebooks/data/EDA.ipynb
+++ b/notebooks/data/EDA.ipynb
@@ -1180,6 +1180,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       "male      675\n",
+       "female    662\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[categorical_columns][\"sex\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smoker\n",
+       "no     1063\n",
+       "yes     274\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[categorical_columns][\"smoker\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       "southeast    364\n",
+       "southwest    325\n",
+       "northwest    324\n",
+       "northeast    324\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[categorical_columns]['region'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
