--- a/notebooks/data/EDA.ipynb
+++ b/notebooks/data/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4   32    male  28.9         0     no  northwest   3866.86"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "1337   61  female  29.1         0    yes  northwest  29141.36"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,14 +272,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>807</th>\n",
-       "      <td>19</td>\n",
+       "      <th>104</th>\n",
+       "      <td>34</td>\n",
        "      <td>female</td>\n",
-       "      <td>36.6</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>5003.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>58</td>\n",
+       "      <td>male</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>0</td>\n",
        "      <td>no</td>\n",
-       "      <td>northwest</td>\n",
-       "      <td>2136.88</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>11365.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>30</td>\n",
+       "      <td>male</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>39241.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>43</td>\n",
+       "      <td>male</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>42124.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>487</th>\n",
@@ -291,50 +321,20 @@
        "      <td>southwest</td>\n",
        "      <td>1253.94</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1135</th>\n",
-       "      <td>50</td>\n",
-       "      <td>female</td>\n",
-       "      <td>28.1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>no</td>\n",
-       "      <td>northwest</td>\n",
-       "      <td>11085.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1162</th>\n",
-       "      <td>30</td>\n",
-       "      <td>male</td>\n",
-       "      <td>38.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>no</td>\n",
-       "      <td>southeast</td>\n",
-       "      <td>18963.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>51</td>\n",
-       "      <td>female</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>no</td>\n",
-       "      <td>northwest</td>\n",
-       "      <td>9644.25</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      age     sex   bmi  children smoker     region  expenses\n",
-       "807    19  female  36.6         0     no  northwest   2136.88\n",
-       "487    19    male  28.7         0     no  southwest   1253.94\n",
-       "1135   50  female  28.1         3     no  northwest  11085.59\n",
-       "1162   30    male  38.8         1     no  southeast  18963.17\n",
-       "198    51  female  18.1         0     no  northwest   9644.25"
+       "     age     sex   bmi  children smoker     region  expenses\n",
+       "104   34  female  27.5         1     no  southwest   5003.85\n",
+       "628   58    male  38.0         0     no  southwest  11365.95\n",
+       "609   30    male  37.8         2    yes  southwest  39241.44\n",
+       "312   43    male  36.0         3    yes  southeast  42124.52\n",
+       "487   19    male  28.7         0     no  southwest   1253.94"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "(1337, 7)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "Index(['sex', 'smoker', 'region'], dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "Index(['age', 'bmi', 'children', 'expenses'], dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "[1337 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "freq     675   1063        364"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
        "[1337 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "max      64.000000    53.100000     5.000000  63770.430000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
        "expenses  16657.72  63770.43  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1336,6 +1336,138 @@
     "    sns.histplot(data=data,x=col,kde=True)\n",
     "    print(\"\\n\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ordinal encoding on catogorical data\n",
+    "\n",
+    "sex_map={\"male\":1,\"female\":0}\n",
+    "smoker_map={\"yes\":1,\"no\":0}\n",
+    "region_map={\"southeast\":1,\"southwest\":2,\"northwest\":3,\"northeast\":4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"sex\"]=data[\"sex\"].map(sex_map)\n",
+    "data[\"smoker\"]=data[\"smoker\"].map(smoker_map)\n",
+    "data[\"region\"]=data[\"region\"].map(region_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>expenses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16884.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1725.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4449.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>21984.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3866.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex   bmi  children  smoker  region  expenses\n",
+       "0   19    0  27.9         0       1       2  16884.92\n",
+       "1   18    1  33.8         1       0       1   1725.55\n",
+       "2   28    1  33.0         3       0       1   4449.46\n",
+       "3   33    1  22.7         0       0       3  21984.47\n",
+       "4   32    1  28.9         0       0       3   3866.86"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
    ]
   },
   {
