Mapping and fit transform problem solved

--- a/notebooks/data/model_training.ipynb
+++ b/notebooks/data/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "[1338 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "[1338 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "[1338 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "Index(['sex', 'smoker', 'region'], dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "Index(['age', 'bmi', 'children'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[1338 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,6 +670,280 @@
    "source": [
     "X.select_dtypes(include='object')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sex_map={\"male\":1,\"female\":0}\n",
+    "smoker_map={\"yes\":1,\"no\":0}\n",
+    "region_map={\"southeast\":1,\"southwest\":2,\"northwest\":3,\"northeast\":4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"sex\"]=data[\"sex\"].map(sex_map)\n",
+    "data[\"smoker\"]=data[\"smoker\"].map(smoker_map)\n",
+    "data[\"region\"]=data[\"region\"].map(region_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>expenses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16884.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1725.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4449.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>21984.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3866.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex   bmi  children  smoker  region  expenses\n",
+       "0   19    0  27.9         0       1       2  16884.92\n",
+       "1   18    1  33.8         1       0       1   1725.55\n",
+       "2   28    1  33.0         3       0       1   4449.46\n",
+       "3   33    1  22.7         0       0       3  21984.47\n",
+       "4   32    1  28.9         0       0       3   3866.86"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer ## Handling the Missing values\n",
+    "from sklearn.preprocessing import StandardScaler # Handling Feature Scaling\n",
+    "from sklearn.preprocessing import OrdinalEncoder # ordinal Encoding\n",
+    "\n",
+    "# Piplines\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_pipeline=Pipeline(\n",
+    "\n",
+    "    steps=[\n",
+    "\n",
+    "        ('imputer',SimpleImputer()),\n",
+    "        ('scaler',StandardScaler())\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_pipeline=Pipeline(\n",
+    "\n",
+    "    steps=[\n",
+    "        ('imputer',SimpleImputer(strategy='most_frequent')),\n",
+    "        ('OrdinalEncoder',OrdinalEncoder(categories=[sex_categories,smoker_categories,region_categories]))\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor=ColumnTransformer(\n",
+    "\n",
+    "    [\n",
+    "        ('num_pipeline',num_pipeline,numirical_cols),\n",
+    "        ('cat_pipeline',cat_pipeline,categorical_cols)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Train Test Split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.30,random_state=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.26120616, -0.76009275, -0.92504639,  0.        ,  1.        ,\n",
+       "         3.        ],\n",
+       "       [-0.97833575,  0.49564145,  2.43745232,  0.        ,  1.        ,\n",
+       "         0.        ],\n",
+       "       [-0.62474772,  2.20800627,  0.75620297,  0.        ,  1.        ,\n",
+       "         0.        ],\n",
+       "       ...,\n",
+       "       [-0.69546533,  0.60979911, -0.92504639,  0.        ,  0.        ,\n",
+       "         1.        ],\n",
+       "       [ 0.78960436,  2.51786276, -0.08442171,  1.        ,  1.        ,\n",
+       "         0.        ],\n",
+       "       [ 1.56749801,  0.85442265, -0.92504639,  0.        ,  0.        ,\n",
+       "         0.        ]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.78960436,  0.26732614, -0.08442171,  0.        ,  0.        ,\n",
+       "         3.        ],\n",
+       "       [-0.62474772,  0.12055202, -0.08442171,  0.        ,  1.        ,\n",
+       "         1.        ],\n",
+       "       [-0.2711597 , -0.58070215, -0.08442171,  0.        ,  1.        ,\n",
+       "         1.        ],\n",
+       "       ...,\n",
+       "       [-1.40264137, -1.62442927, -0.92504639,  0.        ,  1.        ,\n",
+       "         1.        ],\n",
+       "       [-0.05900689, -1.73858693,  0.75620297,  1.        ,  1.        ,\n",
+       "         3.        ],\n",
+       "       [ 1.21390999,  1.11535443,  0.75620297,  1.        ,  1.        ,\n",
+       "         0.        ]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
