small update on research notebook practising the exception code

--- a/notebooks/data/research.ipynb
+++ b/notebooks/data/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 7, 4, 11, 17, 49, 116990)"
+       "datetime.datetime(2024, 7, 5, 9, 20, 15, 802893)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'04_07_24_11_17_55.log'"
+       "'05_07_24_09_20_16.log'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "'c:\\\\Users\\\\Rohitshrimangle\\\\Desktop\\\\ineuron\\\\Projects\\\\Internship Projects\\\\Insurance Prediction\\\\notebooks\\\\data\\\\logs'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "logging.info('i have just test the logging file')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "class customexception(Exception):\n",
+    "    def __init__(self,error_message,error_details:sys):\n",
+    "        self.error_message = error_message\n",
+    "        _,_,exc_tb = error_details.exc_info()\n",
+    "\n",
+    "        self.lineno=exc_tb.tb_lineno\n",
+    "        self.file_name=exc_tb.tb_frame.f_code.co_filename\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"Error occured in python script name [{0}] line number [{1}] error message[{2}]\".format(\n",
+    "            self.file_name, self.lineno, str(self.error_message))\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "\n",
+    "        a= 1/0\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        raise customexception(e,sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "C:\\Users\\Rohitshrimangle\\AppData\\Local\\Temp\\ipykernel_13380\\3017863275.py\n",
+      "(<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x0000020A4DB5B540>)\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    \n",
+    "    a= 1/0\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    _,_,exc_tb = sys.exc_info()\n",
+    "    print(exc_tb.tb_lineno)\n",
+    "    print(exc_tb.tb_frame.f_code.co_filename)\n",
+    "    print(sys.exc_info())\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class customexception(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def __str__(self):\n",
+    "        pass"
    ]
   },
   {
