--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -272,66 +272,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>34</td>\n",
+       "      <th>147</th>\n",
+       "      <td>51</td>\n",
        "      <td>female</td>\n",
-       "      <td>27.5</td>\n",
+       "      <td>37.7</td>\n",
        "      <td>1</td>\n",
        "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>5003.85</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>9877.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>628</th>\n",
-       "      <td>58</td>\n",
-       "      <td>male</td>\n",
-       "      <td>38.0</td>\n",
+       "      <th>1029</th>\n",
+       "      <td>37</td>\n",
+       "      <td>female</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>6877.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>19</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>2719.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>882</th>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "      <td>22.1</td>\n",
        "      <td>0</td>\n",
        "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>11365.95</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>2585.85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>609</th>\n",
-       "      <td>30</td>\n",
-       "      <td>male</td>\n",
-       "      <td>37.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>39241.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>312</th>\n",
-       "      <td>43</td>\n",
+       "      <th>782</th>\n",
+       "      <td>51</td>\n",
        "      <td>male</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>southeast</td>\n",
-       "      <td>42124.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>487</th>\n",
-       "      <td>19</td>\n",
-       "      <td>male</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>1253.94</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>9386.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     age     sex   bmi  children smoker     region  expenses\n",
-       "104   34  female  27.5         1     no  southwest   5003.85\n",
-       "628   58    male  38.0         0     no  southwest  11365.95\n",
-       "609   30    male  37.8         2    yes  southwest  39241.44\n",
-       "312   43    male  36.0         3    yes  southeast  42124.52\n",
-       "487   19    male  28.7         0     no  southwest   1253.94"
+       "      age     sex   bmi  children smoker     region  expenses\n",
+       "147    51  female  37.7         1     no  southeast   9877.61\n",
+       "1029   37  female  17.3         2     no  northeast   6877.98\n",
+       "168    19  female  31.8         1     no  northwest   2719.28\n",
+       "882    21  female  22.1         0     no  northeast   2585.85\n",
+       "782    51    male  36.0         1     no  southeast   9386.16"
       ]
      },
      "execution_count": 5,
